--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -13,3 +13,7 @@ ENV PATH $PATH:/go/bin:/usr/local/go/bin
 COPY . /go/src/github.com/shipyard/shipyard
 
 WORKDIR /go/src/github.com/shipyard/shipyard
+
+RUN make build
+WORKDIR controller
+ENTRYPOINT ./controller -D
