--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -16,4 +16,4 @@ WORKDIR /go/src/github.com/shipyard/shipyard
 
 RUN make build
 WORKDIR controller
-ENTRYPOINT ./controller -D
+ENTRYPOINT ["./controller","-D"]
